UI improvements and new card

--- a/files/homeassistant/hacs_version/individual_ams_lite.yaml
+++ b/files/homeassistant/hacs_version/individual_ams_lite.yaml
@@ -34,10 +34,11 @@ elements:
         'custom:filament-1' : 'mdi:tray' }
     style:
       top: 27%
-      left: 15.4%
+      left: 45%
       '--paper-item-icon-color': var(--tray_1_color)
-      background-color: rgba(0,0,0,0.5)
-      box-shadow: 0 0 5px 5px var(--tray_1_bg)
+      background-color: var(--tray_1_bg)
+      padding: 7px
+      border: 2px solid rgba(255,255,255,0.6)
       border-radius: 50px
       '--mdc-icon-size': 2.4em
   - type: state-label
@@ -46,12 +47,13 @@ elements:
     tap_action:
       action: none
     style:
-      top: 42%
-      left: 15.4%
+      top: 40%
+      left: 45%
       text-align: center
       font-size: 1em
-      background-color: rgba(0,0,0,0.4)
-      box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.4)
+      background-color: var(--tray_1_bg)
+      padding: 7px
+      border: 2px solid rgba(255,255,255,0.6)
       border-radius: 50px
       pointer-events: none
       color: '#FFFFFF'
@@ -65,11 +67,12 @@ elements:
         ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_2'].state != 'Empty' ?
         'custom:filament-1' : 'mdi:tray' }
     style:
-      top: 62%
-      left: 45.7%
+      top: 63%
+      left: 12%
       '--paper-item-icon-color': var(--tray_2_color)
-      background-color: rgba(0,0,0,0.5)
-      box-shadow: 0 0 5px 5px  var(--tray_2_bg)
+      background-color: var(--tray_2_bg)
+      padding: 7px
+      border: 2px solid rgba(255,255,255,0.6)
       border-radius: 50px
       '--mdc-icon-size': 2.4em
   - type: state-label
@@ -79,43 +82,12 @@ elements:
       action: none
     style:
       top: 77%
-      left: 45.7%
+      left: 12%
       text-align: center
       font-size: 1em
-      background-color: rgba(0,0,0,0.4)
-      box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.4)
-      border-radius: 50px
-      pointer-events: none
-      color: '#FFFFFF'
-  - type: custom:config-template-card
-    entities:
-      - sensor.{HA_AMS_DEVICE_NAME}_tray_4
-    element:
-      type: state-icon
-      entity: sensor.{HA_AMS_DEVICE_NAME}_tray_4
-      icon: >-
-        ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_4'].state != 'Empty' ?
-        'custom:filament-1' : 'mdi:tray' }
-    style:
-      top: 11%
-      left: 44.7%
-      '--paper-item-icon-color': var(--tray_4_color)
-      background-color: rgba(0,0,0,0.5)
-      box-shadow: 0 0 5px 5px  var(--tray_4_bg)
-      border-radius: 50px
-      '--mdc-icon-size': 2.4em
-  - type: state-label
-    entity: sensor.{HA_AMS_DEVICE_NAME}_tray_4
-    attribute: type
-    tap_action:
-      action: none
-    style:
-      top: 26%
-      left: 44.7%
-      text-align: center
-      font-size: 1em
-      background-color: rgba(0,0,0,0.4)
-      box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.4)
+      background-color: var(--tray_2_bg)
+      padding: 7px
+      border: 2px solid rgba(255,255,255,0.6)
       border-radius: 50px
       pointer-events: none
       color: '#FFFFFF'
@@ -129,11 +101,12 @@ elements:
         ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_3'].state != 'Empty' ?
         'custom:filament-1' : 'mdi:tray' }
     style:
-      top: 52%
-      left: 84.6%
+      top: 27%
+      left: 88%
       '--paper-item-icon-color': var(--tray_3_color)
-      background-color: rgba(0,0,0,0.5)
-      box-shadow: 0 0 5px 5px var(--tray_3_bg)
+      background-color: var(--tray_3_bg)
+      padding: 7px
+      border: 2px solid rgba(255,255,255,0.6)
       border-radius: 50px
       '--mdc-icon-size': 2.4em
   - type: state-label
@@ -142,28 +115,63 @@ elements:
     tap_action:
       action: none
     style:
-      top: 67%
-      left: 84.6%
+      top: 41%
+      left: 88%
       text-align: center
       font-size: 1em
-      background-color: rgba(0,0,0,0.4)
-      box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.4)
+      background-color: var(--tray_3_bg)
+      padding: 7px
+      border: 2px solid rgba(255,255,255,0.6)
+      border-radius: 50px
+      pointer-events: none
+      color: '#FFFFFF'
+  - type: custom:config-template-card
+    entities:
+      - sensor.{HA_AMS_DEVICE_NAME}_tray_4
+    element:
+      type: state-icon
+      entity: sensor.{HA_AMS_DEVICE_NAME}_tray_4
+      icon: >-
+        ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_4'].state != 'Empty' ?
+        'custom:filament-1' : 'mdi:tray' }
+    style:
+      top: 63%
+      left: 63%
+      '--paper-item-icon-color': var(--tray_4_color)
+      background-color: var(--tray_4_bg)
+      padding: 7px
+      border: 2px solid rgba(255,255,255,0.6)
+      border-radius: 50px
+      '--mdc-icon-size': 2.4em
+  - type: state-label
+    entity: sensor.{HA_AMS_DEVICE_NAME}_tray_4
+    attribute: type
+    tap_action:
+      action: none
+    style:
+      top: 77%
+      left: 63%
+      text-align: center
+      font-size: 1em
+      background-color: var(--tray_4_bg)
+      padding: 7px
+      border: 2px solid rgba(255,255,255,0.6)
       border-radius: 50px
       pointer-events: none
       color: '#FFFFFF'
 image: /local/media/bambuprinter/ams_lite.png
 card_mod:
   style: |
-      ha-card {
-        background: none !important;
-        border: none !important;
-        box-shadow: none !important;
-        --tray_1_color: {{state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_1', 'color') }};
-        --tray_2_color: {{state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_2', 'color') }};
-        --tray_3_color: {{state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_3', 'color') }};
-        --tray_4_color: {{state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_4', 'color') }};
-        --tray_1_bg: {% if is_state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_1', 'active', true) %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,0,0,0.5); {% endif %}
-        --tray_2_bg: {% if is_state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_2', 'active', true) %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,0,0,0.5); {% endif %}
-        --tray_3_bg: {% if is_state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_3', 'active', true) %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,0,0,0.5); {% endif %}
-        --tray_4_bg: {% if is_state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_4', 'active', true) %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,0,0,0.5); {% endif %}
-      }
+    ha-card {
+      background: none !important;
+      border: none !important;
+      box-shadow: none !important;
+      --tray_1_color: {% if is_state_attr('sensor.a1mini_0309da3b0702005_ams_1_tray_1', 'color', '#00000000') %} rgb(255, 255, 255); {% else %} {{state_attr('sensor.a1mini_0309da3b0702005_ams_1_tray_1', 'color') }}; {% endif %}
+      --tray_2_color: {% if is_state_attr('sensor.a1mini_0309da3b0702005_ams_1_tray_2', 'color', '#00000000') %} rgb(255, 255, 255); {% else %} {{state_attr('sensor.a1mini_0309da3b0702005_ams_1_tray_2', 'color') }}; {% endif %}
+      --tray_3_color: {% if is_state_attr('sensor.a1mini_0309da3b0702005_ams_1_tray_3', 'color', '#00000000') %} rgb(255, 255, 255); {% else %} {{state_attr('sensor.a1mini_0309da3b0702005_ams_1_tray_3', 'color') }}; {% endif %}
+      --tray_4_color: {% if is_state_attr('sensor.a1mini_0309da3b0702005_ams_1_tray_4', 'color', '#00000000') %} rgb(255, 255, 255); {% else %} {{state_attr('sensor.a1mini_0309da3b0702005_ams_1_tray_4', 'color') }}; {% endif %}
+      --tray_1_bg: {% if is_state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_1', 'active', true) %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,0,0,0.5); {% endif %}
+      --tray_2_bg: {% if is_state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_2', 'active', true) %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,0,0,0.5); {% endif %}
+      --tray_3_bg: {% if is_state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_3', 'active', true) %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,0,0,0.5); {% endif %}
+      --tray_4_bg: {% if is_state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_4', 'active', true) %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,0,0,0.5); {% endif %}
+    }
