--- a/files/homeassistant/hacs_version/individual_printer_image_a1mini.yaml
+++ b/files/homeassistant/hacs_version/individual_printer_image_a1mini.yaml
@@ -23,9 +23,9 @@ elements:
       - type: conditional
         conditions:
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_status
-            state: 
-            - running
-            - pause
+            state:
+              - running
+              - pause
         elements:
           - type: conditional
             conditions:
@@ -57,16 +57,18 @@ elements:
         type: state-badge
         style:
           top: 30%
-          left: 40.5%
+          left: 40.8%
           font-size: 0.8em
           color: rgba(0,0,0,0)
+          '--label-badge-red': '#0c0c0c'
       - entity: sensor.{HA_PRINTER_DEVICE_NAME}_bed_temperature
         type: state-badge
         style:
-          top: 93%
-          left: 40.5%
+          top: 95%
+          left: 40.8%
           font-size: 0.8em
           color: rgba(0,0,0,0)
+          '--label-badge-red': '#0c0c0c'
 card_mod:
   style: |
     ha-card {
