--- a/files/homeassistant/hacs_version/individual_ams_lite.yaml
+++ b/files/homeassistant/hacs_version/individual_ams_lite.yaml
@@ -30,8 +30,8 @@ elements:
       type: state-icon
       entity: sensor.{HA_AMS_DEVICE_NAME}_tray_1
       icon: >-
-        ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_1'].state != 'Empty' ?
-        'custom:filament-1' : 'mdi:tray' }
+        ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_1'].state.lower != 'empty' ?
+        'fapro:filament-1' : 'mdi:tray' }
     style:
       top: 27%
       left: 45%
@@ -66,11 +66,11 @@ elements:
       type: state-icon
       entity: sensor.{HA_AMS_DEVICE_NAME}_tray_2
       icon: >-
-        ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_2'].state != 'Empty' ?
-        'custom:filament-1' : 'mdi:tray' }
+        ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_2'].state.lower != 'empty' ?
+        'fapro:filament-1' : 'mdi:tray' }
     style:
-      top: 63%
-      left: 12%
+      top: 62%
+      left: 45.7%
       '--paper-item-icon-color': var(--tray_2_color)
       background-color: rgba(0,0,0,0.5)
       padding: 7px
@@ -102,8 +102,8 @@ elements:
       type: state-icon
       entity: sensor.{HA_AMS_DEVICE_NAME}_tray_3
       icon: >-
-        ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_3'].state != 'Empty' ?
-        'custom:filament-1' : 'mdi:tray' }
+        ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_3'].state.lower != 'empty' ?
+        'fapro:filament-1' : 'mdi:tray' }
     style:
       top: 63%
       left: 63%
@@ -138,8 +138,8 @@ elements:
       type: state-icon
       entity: sensor.{HA_AMS_DEVICE_NAME}_tray_4
       icon: >-
-        ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_4'].state != 'Empty' ?
-        'custom:filament-1' : 'mdi:tray' }
+        ${states['sensor.{HA_AMS_DEVICE_NAME}_tray_4'].state.lower != 'empty' ?
+        'fapro:filament-1' : 'mdi:tray' }
     style:
       top: 27%
       left: 88%
